[gd_scene load_steps=26 format=2]

[ext_resource path="res://Src/Outgame/map_fight_1.gd" type="Script" id=1]
[ext_resource path="res://font/Colored Crayons.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Textures/hud/spritesheet2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/Levels/tuto/newtile.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/Levels/tuto/back_land01.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/GUI/mushroom_red.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/GUI/tile_flowerPurple.png" type="Texture" id=7]
[ext_resource path="res://Assets/Textures/GUI/treeDead.png" type="Texture" id=8]
[ext_resource path="res://Assets/Textures/GUI/tree_pine.png" type="Texture" id=9]
[ext_resource path="res://Assets/Textures/GUI/tree_small.png" type="Texture" id=10]
[ext_resource path="res://Assets/Textures/GUI/tile_flowerWhite.png" type="Texture" id=11]
[ext_resource path="res://Assets/Textures/GUI/tile_flowerRed.png" type="Texture" id=12]
[ext_resource path="res://Assets/Textures/GUI/fly.png" type="Texture" id=14]
[ext_resource path="res://Assets/Textures/GUI/bee.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 200
outline_color = Color( 0.121569, 0.0352941, 0.0352941, 1 )
font_data = ExtResource( 2 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 64, 32, 0, 32, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=11]
0/name = "spritesheet2.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "spritesheet2.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 192, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "newtile.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "newtile.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 64, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "newtile.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 64, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "newtile.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 64, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "newtile.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 256, 64, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "newtile.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 320, 64, 64, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "newtile.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 320, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [  ]
8/z_index = 0
9/name = "newtile.png 9"
9/texture = ExtResource( 4 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 64, 128, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "newtile.png 10"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 64, 0, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [  ]
10/z_index = 0
11/name = "newtile.png 11"
11/texture = ExtResource( 4 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 128, 0, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shapes = [  ]
11/z_index = 0
12/name = "newtile.png 12"
12/texture = ExtResource( 4 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 128, 128, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shapes = [  ]
12/z_index = 0
13/name = "newtile.png 13"
13/texture = ExtResource( 4 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 192, 0, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shapes = [  ]
13/z_index = 0

[node name="map 1" type="Node2D"]
light_mask = 0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="return" type="Button" parent="CanvasLayer"]
modulate = Color( 0.952941, 0.960784, 0.0235294, 1 )
self_modulate = Color( 0.713726, 0.713726, 0.74902, 1 )
margin_left = 964.522
margin_top = -65.9999
margin_right = 1090.52
margin_bottom = -0.999985
custom_fonts/font = SubResource( 1 )
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_label" type="Label" parent="."]
margin_left = 768.437
margin_top = 473.467
margin_right = 867.437
margin_bottom = 682.467
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.717647, 0.0352941, 0.0352941, 0.623529 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
tile_set = SubResource( 11 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 1048561, 13, 0, 1048564, 13, 0, 1048565, 13, 0, 1048567, 13, 0, 1048568, 13, 0, 1048571, 13, 0, 1048572, 13, 0, 1048575, 13, 0, 983040, 13, 0, 983061, 13, 0, 983065, 13, 0, 983069, 13, 0, 983070, 13, 0, 983073, 13, 0, 983076, 13, 0, 983077, 13, 0, 1114093, 11, 0, 1114094, 11, 0, 1114095, 11, 0, 1114096, 11, 0, 1114097, 11, 0, 1114098, 11, 0, 1114099, 11, 0, 1114100, 11, 0, 1114101, 11, 0, 1114102, 11, 0, 1114103, 11, 0, 1114104, 11, 0, 1114105, 11, 0, 1114106, 11, 0, 1114107, 11, 0, 1114108, 11, 0, 1114109, 11, 0, 1114110, 11, 0, 1114111, 11, 0, 1048576, 11, 0, 1048577, 11, 0, 1048578, 11, 0, 1048579, 11, 0, 1048580, 11, 0, 1048581, 11, 0, 1048582, 11, 0, 1048583, 11, 0, 1048584, 11, 0, 1048585, 11, 0, 1048586, 11, 0, 1048587, 11, 0, 1048588, 11, 0, 1048589, 11, 0, 1048590, 11, 0, 1048591, 11, 0, 1048592, 11, 0, 1048593, 11, 0, 1048594, 11, 0, 1048595, 11, 0, 1048596, 11, 0, 1048597, 11, 0, 1048598, 11, 0, 1048599, 11, 0, 1048600, 11, 0, 1048601, 11, 0, 1048602, 11, 0, 1048603, 11, 0, 1048604, 11, 0, 1048605, 11, 0, 1048606, 11, 0, 1048607, 11, 0, 1048608, 11, 0, 1048609, 11, 0, 1048610, 11, 0, 1048611, 11, 0, 1048612, 11, 0, 1048613, 11, 0, 1048614, 11, 0, 1048615, 11, 0, 1048616, 11, 0, 1048617, 11, 0, 1048618, 11, 0, 1048619, 11, 0, 1048620, 11, 0, 1048621, 11, 0, 1048622, 11, 0, 1048623, 11, 0, 1048624, 11, 0, 1048625, 11, 0, 1048626, 11, 0, 1048627, 11, 0, 1048628, 11, 0, 1048629, 11, 0, 1048630, 11, 0, 1048631, 11, 0, 1048632, 11, 0, 1048633, 11, 0, 1048634, 11, 0 )

[node name="sky" type="Sprite" parent="TileMap"]
show_behind_parent = true
position = Vector2( -3261.18, -1374.05 )
scale = Vector2( 15.8397, 21.4425 )
texture = ExtResource( 5 )
centered = false

[node name="shroom1" type="Sprite" parent="TileMap"]
position = Vector2( 2057.81, 985.277 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="shroom2" type="Sprite" parent="TileMap"]
position = Vector2( 2568.01, 974.934 )
texture = ExtResource( 6 )

[node name="shroom3" type="Sprite" parent="TileMap"]
position = Vector2( 2212.65, 994.413 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="shroom4" type="Sprite" parent="TileMap"]
position = Vector2( 2289.34, 984.732 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="treedead" type="Sprite" parent="TileMap"]
position = Vector2( 2437.67, 779.152 )
texture = ExtResource( 8 )

[node name="tree_pine" type="Sprite" parent="TileMap"]
position = Vector2( -370.267, 772.711 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="tree_small" type="Sprite" parent="TileMap"]
position = Vector2( -231.052, 990.293 )
scale = Vector2( 0.6, 0.56 )
texture = ExtResource( 10 )

[node name="flower1" type="Sprite" parent="TileMap"]
position = Vector2( -159.36, 989.826 )
scale = Vector2( 0.6, 0.56 )
texture = ExtResource( 7 )

[node name="flower2" type="Sprite" parent="TileMap"]
position = Vector2( -81.7201, 989.046 )
scale = Vector2( 0.6, 0.56 )
texture = ExtResource( 12 )

[node name="flower3" type="Sprite" parent="TileMap"]
position = Vector2( -306.79, 990.733 )
scale = Vector2( 0.6, 0.56 )
texture = ExtResource( 11 )

[node name="flower4" type="Sprite" parent="TileMap"]
position = Vector2( -441.359, 987.454 )
scale = Vector2( 0.6, 0.56 )
texture = ExtResource( 11 )

[node name="bee1" type="Sprite" parent="TileMap"]
position = Vector2( -43.011, 939.757 )
scale = Vector2( 0.6, 0.56 )
texture = ExtResource( 15 )

[node name="bee2" type="Sprite" parent="TileMap"]
position = Vector2( -183.627, 926.78 )
scale = Vector2( 0.6, 0.56 )
texture = ExtResource( 15 )
flip_h = true

[node name="fly1" type="Sprite" parent="TileMap"]
position = Vector2( 2134.48, 921.95 )
scale = Vector2( 0.6, 0.56 )
texture = ExtResource( 14 )

[node name="fly2" type="Sprite" parent="TileMap"]
position = Vector2( 2614.27, 611.337 )
scale = Vector2( 0.6, 0.56 )
texture = ExtResource( 14 )

[node name="game_timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="pressed" from="CanvasLayer/return" to="." method="_on_return_pressed"]
[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]
